# duck

./: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
public/compiled/: analysis.css  analysis.js  duckchess24.js  hello.css  lobby.css  site.css  style.css
public/shess/: theme.css
src/: main.rs
src/views/: all.rs  analysis.rs  base.rs  environment.rs  home.rs  mod.rs  templating.rs
templates/: analysis.html  base.html  hello.html  macros.html
ui/: tsconfig.base.json
ui/@types/duckchess24/: index.d.ts  package.json
ui/analysis/: package.json  vite.config.ts
ui/analysis/src/: analysis.ts  index.ts  main.ts  theme.css
ui/site/: package.json  vite.config.ts
ui/site/src/: index.ts  site.duckchess.globals.ts
ui/site/src/component/: assets.ts  socket.ts
