[package]
name = "duck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
env_logger = "0.10.0"
html = "0.6.2"
lazy_static = "1.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
